--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <title>Calculator</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <script src="Script.js"></script>
-<link rel="stylesheet" src="../style.css">
+<link rel="stylesheet" type="text/css" src="./css/style.css">
 </head>
 <body>
 <div id="header">
